--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   geolocator: ^14.0.2
   get_it: ^9.2.0
   go_router: ^17.0.1
+  google_mlkit_face_detection: ^0.13.1
   image_picker: ^1.2.1
   injectable: ^2.7.1+2
   json_annotation: ^4.9.0
